--- a/assets/styles/login.css
+++ b/assets/styles/login.css
@@ -399,12 +399,12 @@
 
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width:600px) {
     .sign_up_container {
         justify-content: center;
         align-items: center;
         text-align: center;
-        margin-top: 70px;
+        margin-top: 20px;
     }
 
     .login-container {
@@ -415,10 +415,10 @@
 
     #login_form,
     #sign_up_form {
-        margin: 0 auto;
         padding: 20px;
         width: 90%;
         box-shadow: none;
+        margin-right: 20px;
     }
 
     #sign_up_heading {
@@ -430,15 +430,17 @@
     #loginHeading {
         text-align: center;
         font-size: 18px;
-        margin-right: 80px;
+        margin-right: 100px;
     }
 
     #Bus_Logo {
-        margin-left: 10px;
+        position: absolute;
+        left: 100px;
+        top: 50px;
     }
 
     #Bus_logo {
-        margin-left: 20px;
+        margin-right: 30px;
     }
 
     #userType,
@@ -457,7 +459,6 @@
         margin-top: 10px;
     }
 
-
     #Number_input {
         width: 82%;
         font-size: 16px;
@@ -468,8 +469,8 @@
     .input-prefix {
         font-size: 17px;
         position: absolute;
-        margin-left: 8.3%;
-
+        margin-left: 5.9%;
+        margin-top: 0.5px;
     }
 
     #login,
@@ -483,8 +484,8 @@
 
     .eye-icon {
         position: absolute;
-        bottom: 274px;
-        left: 375px;
+        bottom: 314px;
+        right: 15px;
     }
 
     #go_sign_up,
@@ -504,38 +505,66 @@
     .success-message {
         font-size: 12px;
         width: 90%;
-        margin: 10px auto;
+        position: absolute;
+        top: 100px;
+        left: 30px;
     }
 
-    
     .confirm_pass_eye-icon {
         position: absolute;
-        top: 74%; /* Vertically center relative to the input */
-        right: 1%; /* Position near the right edge of the input */
+        top: 70.5%;
+        right: 5%;
     }
 
-    .sign-up-eye-icon{
+    .sign-up-eye-icon {
         position: absolute;
-        top: 66%; /* Vertically center relative to the input */
-        right: 1%; /* Position near the right edge of the input */
+        top: 61%;
+        right: 5%;
     }
 
-    #signUpNameError{
-        margin-right: 18px;
+    #userTypeError{
+        color: red;
+        position: relative;
+        bottom: 20px;
+        right: 32px;
     }
-    #signUpEmailError{
-        margin-right: 220px;
+
+    #emailError{
+        color: red;
+        margin-right: 190px;
         
     }
-    #numberError{
+
+    #passwordError{
+        margin-top: 12px;
         margin-right: 160px;
     }
-    #signUpPassError{
-       margin-right: 270px;
-       width: 150px;
+
+    #signUpNameError {
+        position: relative;
+        left: -25px;
+        
     }
-    #signUpCpassError{
+
+    #signUpEmailError {
+        position: relative;
+        left: -25px;
+    }
+
+    #numberError {
+        position: relative;
+        left: 0px;
+    }
+
+    #signUpPassError {
+        position: relative;
+        left: -25px;
+        margin-top: 15px;
+    }
+
+    #signUpCpassError {
         margin-right: 200px;
         width: 200px;
+        margin-top: 10px;
     }
 }
